--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <div class="container">
         <div class="logo">Logo</div>
-        <ul class="btns" >
+        <ul class="list" >
           <li>Home</li>
           <li class="shop">Shop</li>
           <ul class="cat">
