--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/normalize.css" />
   <link rel="stylesheet" href="../css/all.min.css" />
   <link rel="stylesheet" href="../css/master.css" />
+  <link rel="stylesheet" href="../css/header.css" />
   <link rel="stylesheet" href="../css/home.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
