--- a/pages/home.html
+++ b/pages/home.html
@@ -404,32 +404,6 @@
 
 
 
-
-              <div class="one-pro">
-                <div class="img">
-                  <img src="../images/pro.jpg" alt="">
-                </div>
-                <div class="name-line">
-                  <p class="name">Product Name</p>
-                  <div class="stock"> In Stock</div>
-                </div>
-                <div class="desc">
-                  <p>Decrription</p>
-                </div>
-                <div class="price-line">
-                  <span class="curr">$</span>
-                  <span class="price">30</span>
-                </div>
-                <div class="add">
-                  <div class="add-cart">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <span class="text"> Add to Cart</span>
-                  </div>
-                  <span class="fav-btn fa fa-regular fa-heart"></span>
-                </div>
-              </div>
-
-
               <div class="one-pro">
                 <div class="img">
                   <img src="../images/pro.jpg" alt="">
@@ -456,6 +430,34 @@
 
 
 
+              
+
+              <div class="one-pro">
+                <div class="img">
+                  <img src="../images/pro.jpg" alt="">
+                </div>
+                <div class="name-line">
+                  <p class="name">Product Name</p>
+                  <div class="stock"> In Stock</div>
+                </div>
+                <div class="desc">
+                  <p>Decrription</p>
+                </div>
+                <div class="price-line">
+                  <span class="curr">$</span>
+                  <span class="price">30</span>
+                </div>
+                <div class="add">
+                  <div class="add-cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span class="text"> Add to Cart</span>
+                  </div>
+                  <span class="fav-btn fa fa-regular fa-heart"></span>
+                </div>
+              </div>
+
+
+
               <div class="one-pro">
                 <div class="img">
                   <img src="../images/pro.jpg" alt="">
@@ -481,31 +483,6 @@
               </div>
 
 
-
-
-              <div class="one-pro">
-                <div class="img">
-                  <img src="../images/pro.jpg" alt="">
-                </div>
-                <div class="name-line">
-                  <p class="name">Product Name</p>
-                  <div class="stock"> In Stock</div>
-                </div>
-                <div class="desc">
-                  <p>Decrription</p>
-                </div>
-                <div class="price-line">
-                  <span class="curr">$</span>
-                  <span class="price">30</span>
-                </div>
-                <div class="add">
-                  <div class="add-cart">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <span class="text"> Add to Cart</span>
-                  </div>
-                  <span class="fav-btn fa fa-regular fa-heart"></span>
-                </div>
-              </div>
 
 
               <div class="one-pro">
@@ -586,6 +563,7 @@
               </div>
 
 
+
               <div class="one-pro">
                 <div class="img">
                   <img src="../images/pro.jpg" alt="">
@@ -606,7 +584,34 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span class="text"> Add to Cart</span>
                   </div>
-                  <span class="fav-btn fa fa-regular fa-heart pre-cat"></span>
+                  <span class="fav-btn fa fa-regular fa-heart"></span>
+                </div>
+              </div>
+
+
+
+
+              <div class="one-pro">
+                <div class="img">
+                  <img src="../images/pro.jpg" alt="">
+                </div>
+                <div class="name-line">
+                  <p class="name">Product Name</p>
+                  <div class="stock"> In Stock</div>
+                </div>
+                <div class="desc">
+                  <p>Decrription</p>
+                </div>
+                <div class="price-line">
+                  <span class="curr">$</span>
+                  <span class="price">30</span>
+                </div>
+                <div class="add">
+                  <div class="add-cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span class="text"> Add to Cart</span>
+                  </div>
+                  <span class="fav-btn fa fa-regular fa-heart"></span>
                 </div>
               </div>
 
@@ -664,6 +669,7 @@
               </div>
 
 
+
               <div class="one-pro">
                 <div class="img">
                   <img src="../images/pro.jpg" alt="">
@@ -687,8 +693,6 @@
                   <span class="fav-btn fa fa-regular fa-heart"></span>
                 </div>
               </div>
-
-
 
 
 
@@ -702,11 +706,15 @@
 
           <i class="fas fa-regular fa-angle-right next-cat"></i>
         </div>
+
+
+        
       </div>
     </div>
   </div>
 
 
+  <script src="../js/header.js"></script>
   <script src="../js/home.js"></script>
 </body>
 
