--- a/pages/add_address.html
+++ b/pages/add_address.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/normalize.css" />
   <link rel="stylesheet" href="../css/all.min.css" />
   <link rel="stylesheet" href="../css/master.css" />
   <link rel="stylesheet" href="../css/header.css" />
   <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/home.css" />
+  <link rel="stylesheet" href="../css/home.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-  <link
-  href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
-  rel="stylesheet">
 
-    <title>add_address</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
+
+  <title>Address - Ecommerce</title>
 </head>
+
 <body>
-    
+
 
   <nav class="header">
 
@@ -53,27 +55,27 @@
 
         <div class="btns">
           <a href="#" class="fav-btn fa fa-regular fa-heart"></a>
-          <a href="#" class="cart-btn fa-solid fa-cart-shopping">
+          <a href="cart.html" class="cart-btn fa-solid fa-cart-shopping">
             <span class="count">1</span>
           </a>
-          <a href="#" class="account-btn fa-regular fa-user"></a>
+          <a href="sign.html" class="account-btn fa-regular fa-user"></a>
         </div>
 
       </div>
 
       <div class="down">
         <ul class="nav-links">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="cat-link ">
             <span class="cat-link-text">Category</span>
             <ul class="cat-list">
-              <li><a href="#">Cat 1</a></li>
-              <li><a href="#">Cat 2</a></li>
-              <li><a href="#">Cat 3</a></li>
+              <li><a href="products.html">Cat 1</a></li>
+              <li><a href="products.html">Cat 2</a></li>
+              <li><a href="products.html">Cat 3</a></li>
             </ul>
           </li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
 
@@ -82,8 +84,9 @@
   </nav>
 
   <section class="address form">
-    
+
 
   </section>
 </body>
+
 </html>
