--- a/pages/cart.html
+++ b/pages/cart.html
@@ -227,6 +227,8 @@
 
         </div>
 
+    </div>
+
         <footer>
             <div class="content">
                 <div class="subContent">
@@ -270,7 +272,9 @@
 
 
                 </div>
-                <hr class="container">
+                <div class="container">
+                    <hr>
+                </div>
                 <div>
                     <h5 style="text-align: center;margin: 0;padding: 10px 0 20px 0;">copyrights</h5>
                 </div>
