--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/master.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="../css/product.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -81,17 +81,23 @@
         </div>
     </nav>
 
+    <div class="contact">
+        <div class="container">
+            <div class="parent">
+                <h2 class="title">CONTACT US</h2>
+                <form action="">
+                    <textarea name=""  placeholder="Enter Your Message Here ..."></textarea>
+                    <input type="submit" value="Send">
+                </form>
+            </div>
 
-    <div class="pop-up" id="pop-review">
-        <span class="fa-solid fa-square-xmark close-btn"></span>
-        <form action="">
-            <br>
-            <textarea name="reviewText" class="rev-textbox" placeholder="Write You Review Here ..."></textarea>
-            <input type="submit" value="Send">
-        </form>
+        </div>
+
     </div>
 
-    <div class="overlay"></div>
+
+
+
 
     <footer>
         <div class="content">
@@ -136,7 +142,9 @@
 
 
             </div>
-            <hr class="container">
+            <div class="container">
+                <hr>
+            </div>
             <div>
                 <h5 style="text-align: center;margin: 0;padding: 10px 0 20px 0;">copyrights</h5>
             </div>
@@ -147,7 +155,7 @@
 
 
     <script src="../js/header.js"></script>
-    <script src="../js/product.js"></script>
+    <script src="../js/contact.js"></script>
 </body>
 
 </html>
