--- a/pages/index.html
+++ b/pages/index.html
@@ -757,7 +757,9 @@
 
 
       </div>
-      <hr class="container">
+      <div class="container">
+        <hr>
+      </div>
       <div>
         <h5 style="text-align: center;margin: 0;padding: 10px 0 20px 0;">copyrights</h5>
       </div>
