--- a/pages/Dashboard/categories.html
+++ b/pages/Dashboard/categories.html
@@ -86,8 +86,8 @@
                         </div>
 
                         <div class="table-body">
-<!-- 
-                                                    
+
+<!--                                                     
                             <div class="row" data-cateid="1">
                                 <div class="body-cell">#123</div>
                                 <div class="body-cell">
@@ -135,8 +135,8 @@
         <div></div>
         <p>Are You Sure To Edit Categotry</p>
         <div class="pop-up-btns">
-            <input type="button" value="OK" class="ok-btn">
-            <input type="button" value="CANCEL" class="cancel-btn">
+            <input type="button" value="OK" class="ok-btn-pop">
+            <input type="button" value="CANCEL" class="cancel-btn-pop">
         </div>
     </div>
 
@@ -149,8 +149,8 @@
             <span>This Will Delete All Products In This Category</span>
         </div>
         <div class="pop-up-btns">
-            <input type="button" value="OK" class="ok-btn">
-            <input type="button" value="CANCEL" class="cancel-btn">
+            <input type="button" value="OK" class="ok-btn-pop">
+            <input type="button" value="CANCEL" class="cancel-btn-pop">
         </div>
     </div>
 
@@ -161,7 +161,7 @@
             <p></p>
         </div>
         <div class="pop-up-btns">
-            <input type="button" value="OK" class="ok-btn">
+            <input type="button" value="OK" class="ok-btn-pop">
         </div>
     </div>
 
