--- a/pages/Dashboard/products.html
+++ b/pages/Dashboard/products.html
@@ -153,11 +153,11 @@
                             <input type="number" placeholder="Price" name="price">
                             <input type="number" placeholder="Stock" name="stock">
                             <div class="select-box">
-                                <select id="add-filter-select-cate" name="cate" required>
+                                <select id="add-filter-select-cate" name="cate" >
                                 </select>
                             </div>
                             <div class="select-box" >
-                                <select id="add-filter-select-subcate" name="subcate" required>
+                                <select id="add-filter-select-subcate" name="subcate" >
                                 </select>
                             </div>
                         </div>
@@ -237,18 +237,18 @@
         </div>
     </div>
 
-    <div class="pop-up " id="">
+    <!-- <div class="pop-up " id="">
         <div></div>
         <p></p>
         <div class="pop-up-btns">
             <input type="button" value="OK" class="ok-btn">
             <input type="button" value="CANCEL" class="cancel-btn">
         </div>
-    </div>
+    </div> -->
 
 
 
-    <div class="pop-up " id="">
+    <!-- <div class="pop-up " id="">
         <div></div>
         <div>
             <p></p>
@@ -258,12 +258,33 @@
             <input type="button" value="OK" class="ok-btn">
             <input type="button" value="CANCEL" class="cancel-btn">
         </div>
+    </div> -->
+
+    <div class="pop-up " id="pop-up-delete-pro">
+        <div></div>
+        <div>
+            <p>Are You Sure To Delete Product</p>
+        </div>
+        <div class="pop-up-btns">
+            <input type="button" value="OK" class="ok-btn-pop">
+            <input type="button" value="CANCEL" class="cancel-btn-pop">
+        </div>
+    </div>
+
+
+    <div class="pop-up" id="pop-up-alert">
+        <div></div>
+        <div>
+            <p></p>
+        </div>
+        <div class="pop-up-btns">
+            <input type="button" value="OK" class="ok-btn-pop">
+        </div>
     </div>
 
 
 
-
-    <div class="overlay "></div>
+    <div class="overlay"></div>
 
     <script src="../../js/Dashboard/products.js"> </script>
 </body>
