--- a/pages/product.html
+++ b/pages/product.html
@@ -83,30 +83,21 @@
 
     <div class="product-show">
         <div class="container">
-            <h3 class="title">Product Name</h3>
+            <h3 class="title pro-name"></h3>
             <div class="parent">
 
                 <div class="img-box">
                     <div class="main-img">
-                        <img src="../images/pro.jpg" alt="">
+                        <!-- <img src="../Uploads/products_images/im-1.png" class="img-1 active" alt="">
+                        <img src="../images/logo.png" class="img-2" alt=""> -->
+
                     </div>
 
                     <div class="sub-imgs">
-                        <div class="img active">
-                            <img src="../images/pro.jpg" alt="">
-                        </div>
 
-                        <div class="img">
+                        <!-- <div class="img active sub-img-btn" data-imgnum=".img-1">
                             <img src="../images/pro.jpg" alt="">
-                        </div>
-
-                        <div class="img">
-                            <img src="../images/pro.jpg" alt="">
-                        </div>
-
-                        <div class="img">
-                            <img src="../images/pro.jpg" alt="">
-                        </div>
+                        </div> -->
 
                     </div>
 
@@ -117,12 +108,11 @@
 
                 <div class="main">
                     <div class="info">
-                        <h4 class="pro-name">Product-name</h4>
-                        <span class="stock">In Stock</span>
-                        <p class="desc">Description</p>
+                        <h4 class="pro-name"></h4>
+                        <span class="stock"></span>
                         <div class="price-line">
                             <span class="curr">$</span>
-                            <span class="price">30</span>
+                            <span class="price"></span>
                         </div>
                     </div>
 
@@ -147,9 +137,7 @@
                 <h3 class="sec-tit">Description</h3>
                 <hr>
                 <div class="content">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, nesciunt quae natus
-                        consequatur, dolores itaque et saepe sequi voluptate porro excepturi repudiandae, deserunt
-                        asperiores explicabo voluptatum enim! Molestiae, repudiandae dolor?</p>
+                    <p></p>
                 </div>
             </div>
 
