--- a/pages/Dashboard/categories.html
+++ b/pages/Dashboard/categories.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Dashboard</title>
     <link rel="stylesheet" href="../../css/all.min.css" />
     <link rel="stylesheet" href="../../css/normalize.css" />
     <link rel="stylesheet" href="../../css/master.css" />
     <link rel="stylesheet" href="../../css/Dashboard/dash.css" />
     <link rel="stylesheet" href="../../css/Dashboard/cates.css" />
+    <link rel="icon" href="../../images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+
+        <title>Dashboard - Categories</title>
 
 </head>
 
@@ -26,12 +29,11 @@
 
 
         <div class="sidebar">
-            <h1>E</h1>
             <ul>
                 <li>
-                    <a class="" href="#">
+                    <a class="active" href="categories.html">
                         <i class="fa-regular fa-chart-bar fa-fw"></i>
-                        <span>Dashboard</span>
+                        <span>Categories</span>
                     </a>
                 </li>
                 <li>
@@ -41,26 +43,25 @@
                     </a>
                 </li>
                 <li>
-                    <a class="active" href="#">
-                        <i class="fa-regular fa-chart-bar fa-fw"></i>
-                        <span>Categories</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="" href="#">
+                    <a class="" href="orders.html">
                         <i class="fa-regular fa-chart-bar fa-fw"></i>
                         <span>Orders</span>
                     </a>
                 </li>
                 <li>
-                    <a class="" href="index.html">
+                    <a class="" href="users.html">
                         <i class="fa-regular fa-chart-bar fa-fw"></i>
                         <span>Users</span>
                     </a>
                 </li>
+                <li>
+                    <a class="" href="../../php/sign/signout.php">
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        <span>Exit</span>
+                    </a>
+                </li>
             </ul>
         </div>
-
 
 
 
