--- a/pages/account_my_address.html
+++ b/pages/account_my_address.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <script src="../js/check_session.js"></script>
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/all.min.css" />
     <link rel="stylesheet" href="../css/master.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet"  href="../css/account.css" />
-    <link rel="stylesheet"  href="../css/account_my_addresses.css" />
+    <link rel="stylesheet" href="../css/account.css" />
+    <link rel="stylesheet" href="../css/account_my_addresses.css" />
+    <link rel="icon" href="../images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <title>Address</title>
-</head>
+        <title>Account - My Addresses</title>
+    </head>
 
 <body>
 
@@ -25,45 +28,49 @@
 
     <nav class="header">
 
+        <div class=" over-header"></div>
+
         <div class="container">
 
             <div class="up">
 
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    Online Store
                 </div>
 
                 <div class="srch-box">
 
                     <div class="menu-btn fa-solid fa-bars"></div>
 
-                    <div class="srch-text">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" placeholder="Search">
+                    <div class="srch-cont">
+                        <div class="srch-text">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Search">
+                        </div>
+    
+                        <div class="srch-btn fa-solid fa-magnifying-glass">
+                            <input type="button">
+                        </div>
                     </div>
 
-                    <div class="srch-btn fa-solid fa-magnifying-glass">
-                        <input type="button">
-                    </div>
 
 
                 </div>
 
 
                 <div class="btns">
-                    <a href="#" class="fav-btn fa fa-regular fa-heart"></a>
                     <a href="cart.html" class="cart-btn fa-solid fa-cart-shopping">
                         <span class="count">1</span>
                     </a>
-                    <a href="sign.html" class="account-btn fa-regular fa-user"></a>
+                    <a href="account_details.html" class="account-btn fa-regular fa-user"></a>
                 </div>
 
             </div>
 
             <div class="down">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="cat-link ">
                         <span class="cat-link-text">Category</span>
                         <ul class="cat-list">
@@ -82,6 +89,7 @@
     </nav>
 
 
+
     <div class="container">
         <div class="section">
             <div class="head">
@@ -90,16 +98,20 @@
             <div class="main">
                 <div class="side-bar">
                     <ul>
-                        <li><a href="account_details.html" ><i class=" fas fa-regular fa-user"></i> <span>Details</span> </a></li>
-                        <li><a href="account_my_address.html" class="active"><i class=" fas fa-light fa-location-dot"></i> <span>Addresses</span> </a></li>
-                        <li><a href="account_orders.html"><i class="fa-solid fa-bag-shopping"></i> <span>Orders</span> </a></li>
-                        <li><a href="#"><i class="fa-solid fa-right-from-bracket"></i> <span>Sign Out</span> </a></li>
+                        <li><a href="account_details.html"><i class=" fas fa-regular fa-user"></i> <span>Details</span>
+                            </a></li>
+                        <li><a href="account_my_address.html" class="active"><i
+                                    class=" fas fa-light fa-location-dot"></i> <span>Addresses</span> </a></li>
+                        <li><a href="account_orders.html"><i class="fa-solid fa-bag-shopping"></i> <span>Orders</span>
+                            </a></li>
+                        <li><a href="../php/sign/signout.php"><i class="fa-solid fa-right-from-bracket"></i> <span>Sign
+                                    Out</span> </a></li>
                     </ul>
                 </div>
                 <div class="content">
                     <h3>My Addresses</h3>
                     <div class="parent">
-                        <a  href="account_add_address.html" class="one add-btn">
+                        <a href="account_add_address.html" class="one add-btn">
                             <div>
                                 <i class="fa-solid fa-plus"></i>
                                 <h4>Add Address</h4>
@@ -113,11 +125,12 @@
                             <p>0101021022</p>
                             <p>Addithional</p>
                             <div class="btns">
-                                <input type="button" value="Set Default">
-                                <input type="button" value="Remove">
-                                <input type="button" value="Edit">
+                                <input type="button" value="Set Default" class="set-btn">
+                                <input type="button" value="Remove" class="remove-btn">
+                                <input type="button" value="Edit" class="edit-btn">
                             </div>
                         </div>
+
                         <div class="one"></div>
                         <div class="one"></div>
                         <div class="one"></div>
@@ -133,12 +146,12 @@
     </div>
 
 
-    <!-- <footer>
+    <footer>
         <div class="content">
             <div class="subContent">
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    <span>Online Store</span>
                 </div>
                 <div class="shop">
                     <h2>Social Media</h2>
@@ -185,8 +198,13 @@
 
 
         </div>
-    </footer> -->
-
+    </footer>
+   
+   
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="../js/loader.js"></script>
 
     <script src="../js/header.js"></script>
     <script src="../js/account_my_addresses.js"></script>
