--- a/pages/account_orders.html
+++ b/pages/account_orders.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <script src="../js/check_session.js"></script>
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/all.min.css" />
     <link rel="stylesheet" href="../css/master.css" />
@@ -12,19 +13,23 @@
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/account.css" />
     <link rel="stylesheet" href="../css/account_orders.css" />
+    <link rel="icon" href="../images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <title>Address</title>
-</head>
+        <title>Account - Add Orders</title>
+    </head>
 
 <body>
 
 
 
+  
     <nav class="header">
+
+        <div class="over-header"></div>
 
         <div class="container">
 
@@ -32,39 +37,41 @@
 
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    Online Store
                 </div>
 
                 <div class="srch-box">
 
                     <div class="menu-btn fa-solid fa-bars"></div>
 
-                    <div class="srch-text">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" placeholder="Search">
+                    <div class="srch-cont">
+                        <div class="srch-text">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Search">
+                        </div>
+    
+                        <div class="srch-btn fa-solid fa-magnifying-glass">
+                            <input type="button">
+                        </div>
                     </div>
 
-                    <div class="srch-btn fa-solid fa-magnifying-glass">
-                        <input type="button">
-                    </div>
 
 
                 </div>
 
 
                 <div class="btns">
-                    <a href="#" class="fav-btn fa fa-regular fa-heart"></a>
                     <a href="cart.html" class="cart-btn fa-solid fa-cart-shopping">
                         <span class="count">1</span>
                     </a>
-                    <a href="sign.html" class="account-btn fa-regular fa-user"></a>
+                    <a href="account_details.html" class="account-btn fa-regular fa-user"></a>
                 </div>
 
             </div>
 
             <div class="down">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="cat-link ">
                         <span class="cat-link-text">Category</span>
                         <ul class="cat-list">
@@ -83,6 +90,7 @@
     </nav>
 
 
+
     <div class="container">
         <div class="section">
             <div class="head">
@@ -97,66 +105,81 @@
                                 <span>Addresses</span> </a></li>
                         <li><a href="account_orders.html" class="active"> <i class="fa-solid fa-bag-shopping"></i>
                                 <span>Orders</span> </a></li>
-                        <li><a href="#"><i class="fa-solid fa-right-from-bracket"></i> <span>Sign Out</span> </a></li>
+                        <li><a href="../php/sign/signout.php"><i class="fa-solid fa-right-from-bracket"></i> <span>Sign
+                                    Out</span> </a></li>
                     </ul>
                 </div>
                 <div class="content">
                     <h3 class="title">My Orders</h3>
-                    <table class="">
-                        <thead>
-                            <tr>
-                                <th>Order ID</th>
-                                <th>Date</th>
-                                <th>Status</th>
-                                <th>Total</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                
-                            <tr>
-                                <td>#123</td>
-                                <td>2023/12/12</td>
-                                <td>Processing</td>
-                                <td>
-                                    <span class="num">50$</span> For
-                                    <span class="num">13</span> Items
-                                </td>
-                                <td>
-                                    <span class="view-btn">View</span>
-                                    <span class="cancel-btn">Cancel Order</span>
-                                </td>
-                            </tr>
+
+                    <div class="table-cont">
+
+                        <table class="">
+                            <thead>
+                                <tr>
+                                    <th>Order ID</th>
+                                    <th>Date</th>
+                                    <th>Address</th>
+                                    <th>Status</th>
+                                    <th>Total</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                                <tr>
+                                    <td>#123</td>
+                                    <td>2023/12/12</td>
+                                    <td class="address">country<br>city<br>street<br>build<br>phone<br>note</td>
+                                    <td>Processing</td>
+                                    <td>
+                                        <span class="num">50$</span> For
+                                        <span class="num">13</span> Items
+                                    </td>
+                                    <td>
+                                        <span class="view-btn">View</span>
+                                        <span class="cancel-btn">Cancel Order</span>
+                                    </td>
+                                </tr>
 
 
-                        </tbody>
-                    </table>
+                            </tbody>
+                        </table>
+
+
+
+                    </div>
+
+
+
                 </div>
 
-                <div class="pop-up" id="pop-view">
+                <div class="pop-up " id="pop-view">
                     <span class="fa-solid fa-square-xmark close-btn"></span>
                     <div class="info">
                         <div class="fea">
                             <h5>Order ID :</h5>
-                            <p>#123</p>
+                            <p></p>
                         </div>
                         <div class="fea">
                             <h5>Date :</h5>
-                            <p>#2023/12/12</p>
+                            <p></p>
                         </div>
                         <div class="fea">
                             <h5>Status :</h5>
-                            <p>Processing</p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="content">
-                        <div class="one">
+
+
+                        <!-- <div class="one">
                             <div class="left">
-                                <div class="img">
+                                <a href="#" class="img">
                                     <img src="../images/pro.jpg" alt="" />
-                                </div>
+                                </a>
                                 <div class="det">
-                                    <h4 class="pro-name">Product-name</h4>
+                                    <a href=""><h4 class="pro-name">Product-name</h4></a>
                                     <div class="line">
                                         <h5>Price :</h5>
                                         <p>$30</p>
@@ -171,39 +194,17 @@
                                 <h4>Total Price</h4>
                                 <div class="tot-price-line">$30</div>
                             </div>
-                        </div>
+                        </div> -->
 
 
-                        <div class="one">
-                            <div class="left">
-                                <div class="img">
-                                    <img src="../images/pro.jpg" alt="" />
-                                </div>
-                                <div class="det">
-                                    <h4 class="pro-name">Product-name</h4>
-                                    <div class="line">
-                                        <h5>Price :</h5>
-                                        <p>$30</p>
-                                    </div>
-                                    <div class="line">
-                                        <h5>Quantity :</h5>
-                                        <p>5</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="right">
-                                <h4>Total Price</h4>
-                                <div class="tot-price-line">$30</div>
-                            </div>
-                        </div>
+
                     </div>
 
                     <div class="foot">
                         <div class="fea">
                             <h5>Total Order Price :</h5>
-                            <p>$123</p>
+                            <p></p>
                         </div>
-                        <input type="button" value="Cancel" />
                     </div>
                 </div>
 
@@ -215,13 +216,12 @@
     </div>
     </div>
 
-
-    <!-- <footer>
+    <footer>
         <div class="content">
             <div class="subContent">
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    <span>Online Store</span>
                 </div>
                 <div class="shop">
                     <h2>Social Media</h2>
@@ -268,11 +268,17 @@
 
 
         </div>
-    </footer> -->
+    </footer>
+ 
+ 
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="../js/loader.js"></script>
 
-
+    <script src="../js/check_session.js"></script>
+    <script src="../js/header.js"></script>
     <script src="../js/account_orders.js"></script>
-    <script src="../js/account_my_addresses.js"></script>
 </body>
 
 </html>
