--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="../js/check_session.js"></script>
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/all.min.css" />
     <link rel="stylesheet" href="../css/master.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/cart.css" />
+    <link rel="icon" href="../images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <title>Cart - Ecommerce</title>
+    <title>Cart - Online Store</title>
 </head>
 
 <body>
@@ -25,45 +27,49 @@
 
     <nav class="header">
 
+        <div class=" over-header"></div>
+
         <div class="container">
 
             <div class="up">
 
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    Online Store
                 </div>
 
                 <div class="srch-box">
 
                     <div class="menu-btn fa-solid fa-bars"></div>
 
-                    <div class="srch-text">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" placeholder="Search">
+                    <div class="srch-cont">
+                        <div class="srch-text">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Search">
+                        </div>
+    
+                        <div class="srch-btn fa-solid fa-magnifying-glass">
+                            <input type="button">
+                        </div>
                     </div>
 
-                    <div class="srch-btn fa-solid fa-magnifying-glass">
-                        <input type="button">
-                    </div>
 
 
                 </div>
 
 
                 <div class="btns">
-                    <a href="#" class="fav-btn fa fa-regular fa-heart"></a>
                     <a href="cart.html" class="cart-btn fa-solid fa-cart-shopping">
                         <span class="count">1</span>
                     </a>
-                    <a href="sign.html" class="account-btn fa-regular fa-user"></a>
+                    <a href="account_details.html" class="account-btn fa-regular fa-user"></a>
                 </div>
 
             </div>
 
             <div class="down">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="cat-link ">
                         <span class="cat-link-text">Category</span>
                         <ul class="cat-list">
@@ -81,6 +87,8 @@
         </div>
     </nav>
 
+
+
     <div class="cart">
         <div class="container">
             <h3 class="title">Cart</h3>
@@ -89,15 +97,16 @@
                 <div class="main">
 
 
-                    <div class="one">
+<!-- 
+                    <div class="one ">
                         <div class="left">
                             <span class="fa-solid fa-circle-xmark del-btn"></span>
                             <div class="img">
                                 <img src="../images/pro.jpg" alt="">
                             </div>
                             <div class="info">
+                                <span class="out-stock-warn">Only Available  <span class="num"></span> Pieces</span>
                                 <h4 class="pro-name">Product-name</h4>
-                                <span class="stock">In Stock</span>
                                 <div class="price-line">
                                     <span class="curr">$</span>
                                     <span class="price">30</span>
@@ -113,114 +122,36 @@
                             </div>
                             <div class="tot-price-line">
                                 <span class="curr">$</span>
-                                <span class="tot-price">30</span>
+                                <span class="tot-price">24478730</span>
                             </div>
                         </div>
                     </div>
-
-
-
-
-                    <div class="one">
-                        <div class="left">
-                            <span class="fa-solid fa-circle-xmark del-btn"></span>
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="info">
-                                <h4 class="pro-name">Product-name</h4>
-                                <span class="stock">In Stock</span>
-                                <div class="price-line">
-                                    <span class="curr">$</span>
-                                    <span class="price">30</span>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="right">
-                            <div class="counter">
-                                <span class="decr fa-solid fa-minus decrBtn"></span>
-                                <span class="counterNumber">1</span>
-                                <span class="incr fa-solid fa-plus incrBtn"></span>
-                            </div>
-                            <div class="tot-price-line">
-                                <span class="curr">$</span>
-                                <span class="tot-price">30</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="one">
-                        <div class="left">
-                            <span class="fa-solid fa-circle-xmark del-btn"></span>
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="info">
-                                <h4 class="pro-name">Product-name</h4>
-                                <span class="stock">In Stock</span>
-                                <div class="price-line">
-                                    <span class="curr">$</span>
-                                    <span class="price">30</span>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="right">
-                            <div class="counter">
-                                <span class="decr fa-solid fa-minus decrBtn"></span>
-                                <span class="counterNumber">1</span>
-                                <span class="incr fa-solid fa-plus incrBtn"></span>
-                            </div>
-                            <div class="tot-price-line">
-                                <span class="curr">$</span>
-                                <span class="tot-price">30</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="one">
-                        <div class="left">
-                            <span class="fa-solid fa-circle-xmark del-btn"></span>
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="info">
-                                <h4 class="pro-name">Product-name</h4>
-                                <span class="stock">In Stock</span>
-                                <div class="price-line">
-                                    <span class="curr">$</span>
-                                    <span class="price">30</span>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="right">
-                            <div class="counter">
-                                <span class="decr fa-solid fa-minus decrBtn"></span>
-                                <span class="counterNumber">1</span>
-                                <span class="incr fa-solid fa-plus incrBtn"></span>
-                            </div>
-                            <div class="tot-price-line">
-                                <span class="curr">$</span>
-                                <span class="tot-price">30</span>
-                            </div>
-                        </div>
-                    </div>
-
+ -->
 
 
 
 
                 </div>
 
-                <div class="check-out"></div>
+                <div class="check-out">
+
+                    <div class="totals">
+                        <div class="part">
+                           <span>Total Order Price </span> 
+                           <span id="total-price-order">0.00 $</span> 
+                        </div>
+                        <div class="part">
+                            <span><span class="quant" id="total-quant-order">0</span> Items</span>
+                        </div>
+                    </div>
+
+                    <a  id="check-btn">Check Out</a>
+
+                    <div id="warn">
+                        Please Add At Least One Item To Check Out
+                    </div>
+
+                </div>
 
 
             </div>
@@ -228,69 +159,69 @@
         </div>
 
     </div>
-
-        <footer>
-            <div class="content">
-                <div class="subContent">
-                    <div class="logo">
-                        <img src="../images/logo.png" alt="">
-                        E Commerce
-                    </div>
-                    <div class="shop">
-                        <h2>Social Media</h2>
-                        <ul>
-                            <il><i class="fab fa-facebook-f"></i>Facebook</il>
-                            <il><i class="fab fa-twitter"></i>twitter</il>
-                            <il><i class="fab fa-youtube"></i>Youtube</il>
-                        </ul>
-                    </div>
-                    <div class="shop">
-                        <h2>Shop</h2>
-                        <ul>
-                            <il>Men</il>
-                            <il>Women</il>
-                            <il>Accessories</il>
-                        </ul>
-                    </div>
-                    <div class="shop">
-                        <h2>Supprt</h2>
-                        <ul>
-                            <il>FQ</il>
-                            <il>Shipping</il>
-                            <il><a style="color: var(--default-color);" href="#">Contact Us</a></il>
-                        </ul>
-                    </div>
-                    <div class="shop">
-                        <h2>Keep In Touch</h2>
-                        <ul>
-                            <il>Gmail@gmail.com</il>
-                            <il>01203571855</il>
-
-                        </ul>
-                    </div>
-
-
-
+    <footer>
+        <div class="content">
+            <div class="subContent">
+                <div class="logo">
+                    <img src="../images/logo.png" alt="">
+                    <span>Online Store</span>
                 </div>
-                <div class="container">
-                    <hr>
+                <div class="shop">
+                    <h2>Social Media</h2>
+                    <ul>
+                        <il><i class="fab fa-facebook-f"></i>Facebook</il>
+                        <il><i class="fab fa-twitter"></i>twitter</il>
+                        <il><i class="fab fa-youtube"></i>Youtube</il>
+                    </ul>
                 </div>
-                <div>
-                    <h5 style="text-align: center;margin: 0;padding: 10px 0 20px 0;">copyrights</h5>
+                <div class="shop">
+                    <h2>Shop</h2>
+                    <ul>
+                        <il>Men</il>
+                        <il>Women</il>
+                        <il>Accessories</il>
+                    </ul>
                 </div>
+                <div class="shop">
+                    <h2>Supprt</h2>
+                    <ul>
+                        <il>FQ</il>
+                        <il>Shipping</il>
+                        <il><a style="color: var(--default-color);" href="#">Contact Us</a></il>
+                    </ul>
+                </div>
+                <div class="shop">
+                    <h2>Keep In Touch</h2>
+                    <ul>
+                        <il>Gmail@gmail.com</il>
+                        <il>01203571855</il>
+
+                    </ul>
+                </div>
+
 
 
             </div>
-        </footer>
+            <div class="container">
+                <hr>
+            </div>
+            <div>
+                <h5 style="text-align: center;margin: 0;padding: 10px 0 20px 0;">copyrights</h5>
+            </div>
 
 
+        </div>
+    </footer>
 
 
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="../js/loader.js"></script>
 
 
-
-        <script src="../js/header.js"></script>
-        <script src="../js/cart.js"></script>
+    <script src="../js/header.js"></script>
+    <script src="../js/cart.js"></script>
 </body>
 
 </html>
