--- a/pages/product.html
+++ b/pages/product.html
@@ -11,19 +11,23 @@
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/product.css" />
+    <link rel="icon" href="../images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <title>ProductName - Ecommerce</title>
+    <title>Product - Online Store</title>
 </head>
 
 <body>
 
 
 
+
     <nav class="header">
+
+        <div class=" over-header"></div>
 
         <div class="container">
 
@@ -31,39 +35,41 @@
 
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    Online Store
                 </div>
 
                 <div class="srch-box">
 
                     <div class="menu-btn fa-solid fa-bars"></div>
 
-                    <div class="srch-text">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" placeholder="Search">
+                    <div class="srch-cont">
+                        <div class="srch-text">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Search">
+                        </div>
+    
+                        <div class="srch-btn fa-solid fa-magnifying-glass">
+                            <input type="button">
+                        </div>
                     </div>
 
-                    <div class="srch-btn fa-solid fa-magnifying-glass">
-                        <input type="button">
-                    </div>
 
 
                 </div>
 
 
                 <div class="btns">
-                    <a href="#" class="fav-btn fa fa-regular fa-heart"></a>
                     <a href="cart.html" class="cart-btn fa-solid fa-cart-shopping">
                         <span class="count">1</span>
                     </a>
-                    <a href="sign.html" class="account-btn fa-regular fa-user"></a>
+                    <a href="account_details.html" class="account-btn fa-regular fa-user"></a>
                 </div>
 
             </div>
 
             <div class="down">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="cat-link ">
                         <span class="cat-link-text">Category</span>
                         <ul class="cat-list">
@@ -80,6 +86,8 @@
 
         </div>
     </nav>
+
+
 
     <div class="product-show">
         <div class="container">
@@ -123,10 +131,26 @@
                             <span class="num" id="counterNumber">1</span>
                             <span class="incr fa-solid fa-plus" id="incrBtn"></span>
                         </div>
-                        <div class="add-cart">
+
+                        <!-- <div class="add-cart">
                             <i class="fa-solid fa-cart-shopping"></i>
                             <span class="text"> Add to Cart</span>
-                        </div>
+                        </div> -->
+
+
+
+                        <div class="add">
+                            <div class="add-cart">
+                              <i class="fa-solid fa-cart-shopping"></i>
+                              <span class="text"> Add to Cart</span>
+                              <div class="added-text">
+                              <i class="fa-regular fa-circle-check"></i>
+                              <span>Added Successfully</span> 
+                              </div>
+                              <div class='add-cart-btn'></div>
+                            </div>
+                          </div>
+
                     </div>
 
                 </div>
@@ -221,7 +245,7 @@
 
     <div class="pop-up" id="pop-review">
         <span class="fa-solid fa-square-xmark close-btn"></span>
-        <form action="">
+        <form action="#" method="post">
             <br>
             <textarea name="reviewText" class="rev-textbox" placeholder="Write You Review Here ..."></textarea>
             <input type="submit" value="Send">
@@ -229,13 +253,12 @@
     </div>
 
     <div class="overlay"></div>
-
     <footer>
         <div class="content">
             <div class="subContent">
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    <span>Online Store</span>
                 </div>
                 <div class="shop">
                     <h2>Social Media</h2>
@@ -283,7 +306,10 @@
 
         </div>
     </footer>
-
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="../js/loader.js"></script>
 
     <script src="../js/header.js"></script>
     <script src="../js/product.js"></script>
