--- a/pages/products.html
+++ b/pages/products.html
@@ -4,26 +4,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/all.min.css" />
     <link rel="stylesheet" href="../css/master.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/products.css" />
+    <link rel="icon" href="../images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <title>Categories- Ecommerce</title>
+    <title>Products - Online Store</title>
 </head>
 
 <body>
 
 
 
+
+
     <nav class="header">
+
+        <div class=" over-header"></div>
 
         <div class="container">
 
@@ -31,39 +36,41 @@
 
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    Online Store
                 </div>
 
                 <div class="srch-box">
 
                     <div class="menu-btn fa-solid fa-bars"></div>
 
-                    <div class="srch-text">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" placeholder="Search">
+                    <div class="srch-cont">
+                        <div class="srch-text">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Search">
+                        </div>
+    
+                        <div class="srch-btn fa-solid fa-magnifying-glass">
+                            <input type="button">
+                        </div>
                     </div>
 
-                    <div class="srch-btn fa-solid fa-magnifying-glass">
-                        <input type="button">
-                    </div>
 
 
                 </div>
 
 
                 <div class="btns">
-                    <a href="#" class="fav-btn fa fa-regular fa-heart"></a>
                     <a href="cart.html" class="cart-btn fa-solid fa-cart-shopping">
                         <span class="count">1</span>
                     </a>
-                    <a href="sign.html" class="account-btn fa-regular fa-user"></a>
+                    <a href="account_details.html" class="account-btn fa-regular fa-user"></a>
                 </div>
 
             </div>
 
             <div class="down">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="cat-link ">
                         <span class="cat-link-text">Category</span>
                         <ul class="cat-list">
@@ -81,174 +88,103 @@
         </div>
     </nav>
 
+
     <div class="products-page">
         <div class="container">
-            <p class="title">Catalog</p>
+            <div class="head">
+                <p class="title">Products</p>
+
+                <div class="sel-box ">
+                    <select name="country" id="country-select" class="foucs">
+                        <option value="1" selected>Name</option>
+                        <option value="2">Price - ASCE</option>
+                        <option value="3">Price - DESC</option>
+                    </select>
+                    <span class="title">Sort By</span>
+                </div>
+            </div>
 
             <div class="parent">
-                <div class="filters"></div>
+                <div class="filters">
+                    <ul class="cates-cont">
+
+<!-- 
+                        <li class="one-cate">
+                            <div class="cate-head">
+                                <a href="" class="cate-name">Cate 2</a>
+                                <i class="fa-sharp fa-solid fa-chevron-down drop-cate-btn"></i>
+                            </div>
+                            <ul class="sub-cates-cont">
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate1</a>
+                                </li>
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate2</a>
+                                </li>
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate3</a>
+                                </li>
+                            </ul>
+                        </li>
+
+
+
+                        <li class="one-cate">
+                            <div class="cate-head">
+                                <a href="" class="cate-name">Cate 2</a>
+                                <i class="fa-sharp fa-solid fa-chevron-down drop-cate-btn"></i>
+                            </div>
+                            <ul class="sub-cates-cont">
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate4</a>
+                                </li>
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate5</a>
+                                </li>
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate6</a>
+                                </li>
+                            </ul>
+                        </li>
+
+
+                        <li class="one-cate">
+                            <div class="cate-head">
+                                <a href="" class="cate-name">Cate 2</a>
+                                <i class="fa-sharp fa-solid fa-chevron-down drop-cate-btn"></i>
+                            </div>
+                            <ul class="sub-cates-cont">
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate7</a>
+                                </li>
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate8</a>
+                                </li>
+                                <li class="one-sub-cate">
+                                    <a href="" class="sub-cate-name">subcate9</a>
+                                </li>
+                            </ul>
+                        </li> -->
+
+
+                    </ul>
+
+
+                </div>
                 <div class="main">
-                    <div class="products">
-
-
-                        <div class="one-pro">
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="name-line">
-                                <p class="name">Product Name</p>
-                                <div class="stock"> In Stock</div>
-                            </div>
-                            <div class="desc">
-                                <p>Decrription</p>
-                            </div>
-                            <div class="price-line">
-                                <span class="curr">$</span>
-                                <span class="price">30</span>
-                            </div>
-                            <div class="add">
-                                <div class="add-cart">
-                                    <i class="fa-solid fa-cart-shopping"></i>
-                                    <span class="text"> Add to Cart</span>
-                                </div>
-                                <span class="fav-btn fa fa-regular fa-heart"></span>
-                            </div>
-                        </div>
-
-
-                        <div class="one-pro">
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="name-line">
-                                <p class="name">Product Name</p>
-                                <div class="stock"> In Stock</div>
-                            </div>
-                            <div class="desc">
-                                <p>Decrription</p>
-                            </div>
-                            <div class="price-line">
-                                <span class="curr">$</span>
-                                <span class="price">30</span>
-                            </div>
-                            <div class="add">
-                                <div class="add-cart">
-                                    <i class="fa-solid fa-cart-shopping"></i>
-                                    <span class="text"> Add to Cart</span>
-                                </div>
-                                <span class="fav-btn fa fa-regular fa-heart"></span>
-                            </div>
-                        </div>
-
-
-                        <div class="one-pro">
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="name-line">
-                                <p class="name">Product Name</p>
-                                <div class="stock"> In Stock</div>
-                            </div>
-                            <div class="desc">
-                                <p>Decrription</p>
-                            </div>
-                            <div class="price-line">
-                                <span class="curr">$</span>
-                                <span class="price">30</span>
-                            </div>
-                            <div class="add">
-                                <div class="add-cart">
-                                    <i class="fa-solid fa-cart-shopping"></i>
-                                    <span class="text"> Add to Cart</span>
-                                </div>
-                                <span class="fav-btn fa fa-regular fa-heart"></span>
-                            </div>
-                        </div>
-                        <div class="one-pro">
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="name-line">
-                                <p class="name">Product Name</p>
-                                <div class="stock"> In Stock</div>
-                            </div>
-                            <div class="desc">
-                                <p>Decrription</p>
-                            </div>
-                            <div class="price-line">
-                                <span class="curr">$</span>
-                                <span class="price">30</span>
-                            </div>
-                            <div class="add">
-                                <div class="add-cart">
-                                    <i class="fa-solid fa-cart-shopping"></i>
-                                    <span class="text"> Add to Cart</span>
-                                </div>
-                                <span class="fav-btn fa fa-regular fa-heart"></span>
-                            </div>
-                        </div>
-                        <div class="one-pro">
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="name-line">
-                                <p class="name">Product Name</p>
-                                <div class="stock"> In Stock</div>
-                            </div>
-                            <div class="desc">
-                                <p>Decrription</p>
-                            </div>
-                            <div class="price-line">
-                                <span class="curr">$</span>
-                                <span class="price">30</span>
-                            </div>
-                            <div class="add">
-                                <div class="add-cart">
-                                    <i class="fa-solid fa-cart-shopping"></i>
-                                    <span class="text"> Add to Cart</span>
-                                </div>
-                                <span class="fav-btn fa fa-regular fa-heart"></span>
-                            </div>
-                        </div>
-                        <div class="one-pro">
-                            <div class="img">
-                                <img src="../images/pro.jpg" alt="">
-                            </div>
-                            <div class="name-line">
-                                <p class="name">Product Name</p>
-                                <div class="stock"> In Stock</div>
-                            </div>
-                            <div class="desc">
-                                <p>Decrription</p>
-                            </div>
-                            <div class="price-line">
-                                <span class="curr">$</span>
-                                <span class="price">30</span>
-                            </div>
-                            <div class="add">
-                                <div class="add-cart">
-                                    <i class="fa-solid fa-cart-shopping"></i>
-                                    <span class="text"> Add to Cart</span>
-                                </div>
-                                <span class="fav-btn fa fa-regular fa-heart"></span>
-                            </div>
-                        </div>
-
-
-
-
+                    <div class="products" id="products-content">
 
                     </div>
                     <div class="page-num">
-                        <i class="fas fa-regular fa-angle-left"></i>
+                        <i class="fas fa-regular fa-angle-left" id="prev-page-btn"></i>
                         <div class="nums">
                             <span class="active">1</span>
-                            <span>2</span>
+                            <span data-pgNum="2" >2</span>
                             <span>3</span>
                             <span>4</span>
                             <span>5</span>
                         </div>
-                        <i class="fas fa-regular fa-angle-right"></i>
+                        <i class="fas fa-regular fa-angle-right " id="next-page-btn"></i>
                     </div>
                 </div>
             </div>
@@ -264,7 +200,7 @@
             <div class="subContent">
                 <div class="logo">
                     <img src="../images/logo.png" alt="">
-                    E Commerce
+                    <span>Online Store</span>
                 </div>
                 <div class="shop">
                     <h2>Social Media</h2>
@@ -304,7 +240,8 @@
             </div>
             <div class="container">
                 <hr>
-            </div>            <div>
+            </div>
+            <div>
                 <h5 style="text-align: center;margin: 0;padding: 10px 0 20px 0;">copyrights</h5>
             </div>
 
@@ -313,6 +250,10 @@
     </footer>
 
 
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="../js/loader.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/products.js"></script>
 </body>
